--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="full-screen-video-container">
+
+  <div class="full-screen-video-container" style="width: 100%;height: auto;">
     <video poster="https://i.imgur.com/CSlRcW4.jpg" autoplay loop muted>
       <source
         src="https://github.com/WebDevSimplified/css-challenges/blob/master/Responsive%20Video%20Background/background_video.mp4?raw=true"
         type="video/mp4" />
     </video>
-
-    <header class=" main-header" style="height: auto; width: 100%; ">
+    <header class=" main-header">
       <h1><span>Endless day</span></h1>
       <p>...feelings you can see..
       </p>
@@ -25,11 +25,11 @@
   </div>
 
 
-  <section class=" card" style="height: 100%; width: 100%" data-aos="fade-up" data-aos-anchor-placement="center-center">
+  <section class=" card" data-aos-anchor-placement="center-center" style="width: 100%;height: auto;">
     <img src="https://images.pexels.com/photos/2775196/pexels-photo-2775196.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
       alt="" />
-    <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-      <h3><em>Your thoughts create your feelings...</em></h3>
+    <div class="paragraph" data-aos="fade-up">
+      <h1><em>Your thoughts create your feelings...</em></h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
         enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -40,11 +40,11 @@
     </div>
   </section>
 
-  <section class="card" data-aos="fade-right">
+  <section class="card" data-aos="fade-right" style="width: 100%;height: auto;">
     <img src="https://i.ibb.co/3NHjDcW/paint-2.png" alt="" />
 
-    <div data-aos="fade-up" data-aos-duration="4000">
-      <h3>Your feelings create your thoughts</h3>
+    <div class="paragraph" data-aos="fade-up" data-aos-duration="4000">
+      <h1>Your feelings create your thoughts</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
         enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -55,12 +55,12 @@
     </div>
   </section>
 
-  <section class="card" data-aos="fade-left">
+  <section class="card" data-aos="fade-left" style="width: 100%;height: auto;">
     <img
       src="https://images.pexels.com/photos/777211/winter-sunset-purple-sky-777211.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
       alt="" />
-    <div data-aos="fade-down">
-      <h3>Think about your feelings</h3>
+    <div class="paragraph" data-aos="fade-down">
+      <h1>Think about your feelings</h1>
       <p data-aos="fade-left">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
         enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -73,8 +73,8 @@
 
   <section class="card" data-aos="fade-right">
     <img src="https://i.ibb.co/5LkJFRP/paint-4.png" alt="" />
-    <div data-aos="fade-down-left">
-      <h3>Feel your thoughts...</h3>
+    <div class="paragraph" data-aos="fade-down-left">
+      <h1>Feel your thoughts...</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
         enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -88,8 +88,8 @@
   <section class="card" data-aos="fade-right">
     <img src="https://images.pexels.com/photos/1819657/pexels-photo-1819657.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
       alt="" />
-    <div data-aos="fade-down-left">
-      <h3>Let your feelings create <span class="end">endless day...</span></h3>
+    <div class="paragraph" data-aos="fade-down-left">
+      <h1>Let your feelings create <span class="end">endless day...</span></h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
         enim laudantium, animi veniam libero eveniet culpa unde perferendis
