--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </div>
   </section>
 
-  <section class="card" data-aos="fade-right" style="width: 100%;height: auto;">
+  <section class="card" data-aos="fade-right" data-aos-anchor-placement="center-center"
+    style="width: 100%;height: auto;">
     <img src="https://i.ibb.co/3NHjDcW/paint-2.png" alt="" />
 
     <div class="paragraph" data-aos="fade-up" data-aos-duration="4000">
@@ -71,7 +72,7 @@
     </div>
   </section>
 
-  <section class="card" data-aos="fade-right">
+  <section class="card" data-aos="fade-right" style="width: 100%;height: auto;">
     <img src="https://i.ibb.co/5LkJFRP/paint-4.png" alt="" />
     <div class="paragraph" data-aos="fade-down-left">
       <h1>Feel your thoughts...</h1>
@@ -85,7 +86,7 @@
     </div>
   </section>
 
-  <section class="card" data-aos="fade-right">
+  <section class="card" data-aos="fade-right" style="width: 100%;height: auto;">
     <img src="https://images.pexels.com/photos/1819657/pexels-photo-1819657.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
       alt="" />
     <div class="paragraph" data-aos="fade-down-left">
