--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="full-screen-video-container" style="width: 100%;height: auto;">
-    <video poster="https://i.imgur.com/CSlRcW4.jpg" autoplay loop muted>
+    <video poster="https://i.imgur.com/CSlRcW4.jpg" controls>
       <source
         src="https://github.com/WebDevSimplified/css-challenges/blob/master/Responsive%20Video%20Background/background_video.mp4?raw=true"
         type="video/mp4" />
