--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         />
         <button class="login__btn">submit</button>
       </form>
+      <p >PSW: js , PIN : 1111</p>
     </nav>
 
     <main class="app">
