--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           placeholder="psw"
           class="login__input login__input--user"
         />
+        <p style="font-size: 20px;" >PSW:<br> js <br>jd</p>
       
         <input
           type="text"
@@ -32,9 +33,10 @@
           maxlength="4"
           class="login__input login__input--pin"
         />
+          <p style="font-size: 20px;"> PIN :<br> 1111<br>2222</p>
         <button class="login__btn">submit</button>
       </form>
-      <p >PSW: js , PIN : 1111</p>
+      
     </nav>
 
     <main class="app">
