--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="operation operation--transfer">
         <h2>Transfer money</h2>
         <form class="form form--transfer">
-          <input type="text" placeholder="Transfer to"  style="placeholder{font-size:10px; opacity:0.5;}"class="form__input form__input--to" />
+          <input type="text" placeholder="Transfer to" class="form__input form__input--to" />
           <input type="number" placeholder="Amount" class="form__input form__input--amount" />
           <button class="form__btn form__btn--transfer">transfer</button>
           <label class="form__label"></br> (jd)</label>
